# yttria-math

./: Cargo.toml  readme.md
src/: lib.rs  prelude.rs  utils.rs
src/unit/: mod.rs  sqrt.rs
src/vector/: arithmetic.rs  bits.rs  complex.rs  fft.rs  float.rs  generic.rs  integer.rs  mod.rs  statistics.rs  utils.rs
src/windows/: cosine_sum.rs  mod.rs
